
[package]
name = "rust-reboot-zte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dependencies.headless_chrome]
git = "https://github.com/atroche/rust-headless-chrome"
features = ["fetch"]
